--- a/BookCRUDApp/Pages/BookList/Index.cshtml
+++ b/BookCRUDApp/Pages/BookList/Index.cshtml
@@ -53,7 +53,7 @@
                       </td>
 
                       <td>
-                          <button asp-page-handler="Delete" asp-route-id="@item.ID" onclick="return confirm('Are you sure you want to delete this record?')" class="btn btn-danger btn-sm">Delite</button>
+                          <button asp-page-handler="Delete" asp-route-id="@item.ID" onclick="return confirm('Are you sure you want to delete this record?')" class="btn btn-danger btn-sm">Delete</button>
                           <a asp-page="Edit"  asp-route-id="@item.ID" class="btn btn-info btn-sm text-white">Edit</a>
                       </td>
                   </tr>
